--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "6to5-runtime": "^3.4.1",
     "autoprefixer-loader": "^1.1.0",
     "css-loader": "^0.9.1",
+    "immstruct": "^1.3.1",
     "less": "^2.3.1",
     "less-loader": "^2.0.0",
     "omniscient": "^2.1.0",
