--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "omniscient+immstruct es6 starter pack",
   "main": "hot-reload-server.js",
   "dependencies": {
-    "6to5": "^3.4.1",
-    "6to5-core": "^3.4.1",
-    "6to5-loader": "^3.0.0",
-    "6to5-runtime": "^3.4.1",
+    "babel": "^5.2.6",
+    "babel-core": "^5.2.6",
+    "babel-loader": "^5.0.0",
+    "babel-runtime": "^5.2.6",
     "autoprefixer-loader": "^1.1.0",
     "css-loader": "^0.9.1",
     "immstruct": "^1.3.1",
