--- a/package.json
+++ b/package.json
@@ -4,21 +4,23 @@
   "description": "omniscient+immstruct es6 starter pack",
   "main": "hot-reload-server.js",
   "dependencies": {
-    "babel": "^5.2.6",
-    "babel-core": "^5.2.6",
-    "babel-loader": "^5.0.0",
-    "babel-runtime": "^5.2.6",
-    "autoprefixer-loader": "^1.1.0",
-    "css-loader": "^0.9.1",
-    "immstruct": "^1.3.1",
-    "less": "^2.3.1",
-    "less-loader": "^2.0.0",
-    "omniscient": "^2.1.0",
-    "react": "^0.12.2",
-    "react-hot-loader": "^1.1.4",
-    "style-loader": "^0.8.3",
-    "webpack": "^1.5.3",
-    "webpack-dev-server": "^1.7.0"
+    "autoprefixer-loader": "^2.0.0",
+    "babel": "^5.8.3",
+    "babel-core": "^5.8.3",
+    "babel-loader": "^5.3.2",
+    "babel-runtime": "^5.8.3",
+    "css-loader": "^0.15.5",
+    "immstruct": "^2.0.0",
+    "js-csp": "^0.4.1",
+    "less": "^2.5.1",
+    "less-loader": "^2.2.0",
+    "omniscient": "^3.2.0",
+    "react": "^0.13.3",
+    "react-hot-loader": "^1.2.8",
+    "redux": "^1.0.0-rc",
+    "style-loader": "^0.12.3",
+    "webpack": "^1.10.2",
+    "webpack-dev-server": "^1.10.1"
   },
   "devDependencies": {},
   "scripts": {
@@ -38,7 +40,7 @@
     "hot-reload"
   ],
   "author": "@torgeir",
-  "license": "mit",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/omniscient/omniscient-starter-pack/issues"
   },
