--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
   "description": "omniscient+immstruct es6 starter pack",
   "main": "hot-reload-server.js",
   "dependencies": {
+    "immstruct": "^2.0.0",
+    "omniscient": "^4.0.0",
+    "react-dom": "^0.14.0",
+    "react": "^0.14.0"
+  },
+  "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
     "babel": "^5.8.3",
     "babel-core": "^5.8.3",
     "babel-loader": "^5.3.2",
     "babel-runtime": "^5.8.3",
     "css-loader": "^0.15.5",
-    "immstruct": "^2.0.0",
-    "js-csp": "^0.4.1",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
-    "omniscient": "^3.2.0",
-    "react": "^0.13.3",
     "react-hot-loader": "^1.2.8",
-    "redux": "^1.0.0-rc",
     "style-loader": "^0.12.3",
     "webpack": "^1.10.2",
     "webpack-dev-server": "^1.10.1"
   },
-  "devDependencies": {},
   "scripts": {
-    "watch": "node hot-reload-server.js"
+    "start": "node hot-reload-server.js"
   },
   "repository": {
     "type": "git",
